[Timeseries] Add deadletter basic pattern with TupleTags [Timeseries] Add option for end timestamp and input file path [Timeseries] Simplify logic to calculate absolute time using Instant without time zone [Timeseries] Refactor timestamp and instant inits and add for loop to init ask, bid and volumes [Timeseries] Add logger

--- a/timeseries-streaming/timeseries-python-applications/notebooks/Comparing_metrics_with_Pandas.ipynb
+++ b/timeseries-streaming/timeseries-python-applications/notebooks/Comparing_metrics_with_Pandas.ipynb
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!gradle -p ../../timeseries-java-applications forex_example --args='--resampleSec=5 --windowSec=60 --runner=DataflowRunner --workerMachineType=n1-standard-4 --project=<GCPPROJECT> --region=<REGION> --bigQueryTableForTSAccumOutputLocation=<GCPPROJECT>:<DATASET>.<TABLE> --gcpTempLocation=<GCPTMPLOCATION> --tempLocation=<TMPLOCATION> --timezone=\"Europe/London\"'"
+    "!gradle -p ../../timeseries-java-applications forex_example --args='--resampleSec=5 --windowSec=60 --runner=DataflowRunner --workerMachineType=n1-standard-4 --project=<GCPPROJECT> --region=<REGION> --bigQueryTableForTSAccumOutputLocation=<GCPPROJECT>:<DATASET>.<TABLE> --gcpTempLocation=<GCPTMPLOCATION> --tempLocation=<TMPLOCATION> --inputPath=<INPUTDATASETLOCATION>'"
    ]
   },
   {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "[16960 rows x 3 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
        "[16960 rows x 3 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
        "<AxesSubplot:xlabel='upper_window_boundary'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
        "<AxesSubplot:xlabel='upper_window_boundary'>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
        "[16960 rows x 3 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +911,7 @@
        "[16960 rows x 3 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,6 +1082,156 @@
     ").sort_values(by=['upper_window_boundary'])\n",
     "\n",
     "last_bq.index = pd.to_datetime(last_bq['upper_window_boundary'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lower_window_boundary</th>\n",
+       "      <th>upper_window_boundary</th>\n",
+       "      <th>LAST</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>upper_window_boundary</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-05-11 00:00:05+00:00</th>\n",
+       "      <td>2020-05-11 00:00:00+00:00</td>\n",
+       "      <td>2020-05-11 00:00:05+00:00</td>\n",
+       "      <td>1.08372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-11 00:00:10+00:00</th>\n",
+       "      <td>2020-05-11 00:00:05+00:00</td>\n",
+       "      <td>2020-05-11 00:00:10+00:00</td>\n",
+       "      <td>1.08378</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-11 00:00:15+00:00</th>\n",
+       "      <td>2020-05-11 00:00:10+00:00</td>\n",
+       "      <td>2020-05-11 00:00:15+00:00</td>\n",
+       "      <td>1.08378</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-11 00:00:20+00:00</th>\n",
+       "      <td>2020-05-11 00:00:15+00:00</td>\n",
+       "      <td>2020-05-11 00:00:20+00:00</td>\n",
+       "      <td>1.08372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-11 00:00:25+00:00</th>\n",
+       "      <td>2020-05-11 00:00:20+00:00</td>\n",
+       "      <td>2020-05-11 00:00:25+00:00</td>\n",
+       "      <td>1.08369</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-11 23:59:40+00:00</th>\n",
+       "      <td>2020-05-11 23:59:35+00:00</td>\n",
+       "      <td>2020-05-11 23:59:40+00:00</td>\n",
+       "      <td>1.08088</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-11 23:59:45+00:00</th>\n",
+       "      <td>2020-05-11 23:59:40+00:00</td>\n",
+       "      <td>2020-05-11 23:59:45+00:00</td>\n",
+       "      <td>1.08089</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-11 23:59:50+00:00</th>\n",
+       "      <td>2020-05-11 23:59:45+00:00</td>\n",
+       "      <td>2020-05-11 23:59:50+00:00</td>\n",
+       "      <td>1.08091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-11 23:59:55+00:00</th>\n",
+       "      <td>2020-05-11 23:59:50+00:00</td>\n",
+       "      <td>2020-05-11 23:59:55+00:00</td>\n",
+       "      <td>1.08091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-12 00:00:00+00:00</th>\n",
+       "      <td>2020-05-11 23:59:55+00:00</td>\n",
+       "      <td>2020-05-12 00:00:00+00:00</td>\n",
+       "      <td>1.08093</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>17280 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              lower_window_boundary     upper_window_boundary  \\\n",
+       "upper_window_boundary                                                           \n",
+       "2020-05-11 00:00:05+00:00 2020-05-11 00:00:00+00:00 2020-05-11 00:00:05+00:00   \n",
+       "2020-05-11 00:00:10+00:00 2020-05-11 00:00:05+00:00 2020-05-11 00:00:10+00:00   \n",
+       "2020-05-11 00:00:15+00:00 2020-05-11 00:00:10+00:00 2020-05-11 00:00:15+00:00   \n",
+       "2020-05-11 00:00:20+00:00 2020-05-11 00:00:15+00:00 2020-05-11 00:00:20+00:00   \n",
+       "2020-05-11 00:00:25+00:00 2020-05-11 00:00:20+00:00 2020-05-11 00:00:25+00:00   \n",
+       "...                                             ...                       ...   \n",
+       "2020-05-11 23:59:40+00:00 2020-05-11 23:59:35+00:00 2020-05-11 23:59:40+00:00   \n",
+       "2020-05-11 23:59:45+00:00 2020-05-11 23:59:40+00:00 2020-05-11 23:59:45+00:00   \n",
+       "2020-05-11 23:59:50+00:00 2020-05-11 23:59:45+00:00 2020-05-11 23:59:50+00:00   \n",
+       "2020-05-11 23:59:55+00:00 2020-05-11 23:59:50+00:00 2020-05-11 23:59:55+00:00   \n",
+       "2020-05-12 00:00:00+00:00 2020-05-11 23:59:55+00:00 2020-05-12 00:00:00+00:00   \n",
+       "\n",
+       "                              LAST  \n",
+       "upper_window_boundary               \n",
+       "2020-05-11 00:00:05+00:00  1.08372  \n",
+       "2020-05-11 00:00:10+00:00  1.08378  \n",
+       "2020-05-11 00:00:15+00:00  1.08378  \n",
+       "2020-05-11 00:00:20+00:00  1.08372  \n",
+       "2020-05-11 00:00:25+00:00  1.08369  \n",
+       "...                            ...  \n",
+       "2020-05-11 23:59:40+00:00  1.08088  \n",
+       "2020-05-11 23:59:45+00:00  1.08089  \n",
+       "2020-05-11 23:59:50+00:00  1.08091  \n",
+       "2020-05-11 23:59:55+00:00  1.08091  \n",
+       "2020-05-12 00:00:00+00:00  1.08093  \n",
+       "\n",
+       "[17280 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "last_bq"
    ]
   },
   {
@@ -1129,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
