[Timeseries] Removing unused imports

--- a/timeseries-streaming/timeseries-python-applications/notebooks/Comparing_metrics_with_Pandas.ipynb
+++ b/timeseries-streaming/timeseries-python-applications/notebooks/Comparing_metrics_with_Pandas.ipynb
@@ -429,8 +429,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
     "eurusd = pd.read_csv(\"../../timeseries-java-applications/Examples/src/main/resources/EURUSD-2020-05-11_2020-05-11.csv\",\n",
@@ -875,8 +873,8 @@
     "import numpy as np\n",
     "\n",
     "from bokeh.io import show, output_notebook\n",
-    "from bokeh.layouts import column, gridplot\n",
-    "from bokeh.models import ColumnDataSource, RangeTool\n",
+    "from bokeh.layouts import column\n",
+    "from bokeh.models import RangeTool\n",
     "from bokeh.plotting import figure\n",
     "\n",
     "dates = np.array(bid_ma60_df_utc_join.index, dtype=np.datetime64)\n",
@@ -931,8 +929,8 @@
     "import numpy as np\n",
     "\n",
     "from bokeh.io import show, output_notebook\n",
-    "from bokeh.layouts import column, gridplot\n",
-    "from bokeh.models import ColumnDataSource, RangeTool\n",
+    "from bokeh.layouts import column\n",
+    "from bokeh.models import RangeTool\n",
     "from bokeh.plotting import figure\n",
     "\n",
     "dates = np.array(bid_std_dev_df_utc_join.index, dtype=np.datetime64)\n",
@@ -1135,8 +1133,8 @@
     "import numpy as np\n",
     "\n",
     "from bokeh.io import show, output_notebook\n",
-    "from bokeh.layouts import column, gridplot\n",
-    "from bokeh.models import ColumnDataSource, RangeTool\n",
+    "from bokeh.layouts import column\n",
+    "from bokeh.models import RangeTool\n",
     "from bokeh.plotting import figure\n",
     "\n",
     "dates_unsampled = np.array(eurusd.index, dtype=np.datetime64)\n",
@@ -1219,8 +1217,8 @@
     "import numpy as np\n",
     "\n",
     "from bokeh.io import show, output_notebook\n",
-    "from bokeh.layouts import column, gridplot\n",
-    "from bokeh.models import ColumnDataSource, RangeTool\n",
+    "from bokeh.layouts import column\n",
+    "from bokeh.models import RangeTool\n",
     "from bokeh.plotting import figure\n",
     "\n",
     "dates_unsampled = np.array(eurusd.index, dtype=np.datetime64)\n",
