--- a/timeseries-streaming/timeseries-python-applications/notebooks/Comparing_metrics_with_Pandas.ipynb
+++ b/timeseries-streaming/timeseries-python-applications/notebooks/Comparing_metrics_with_Pandas.ipynb
@@ -59,9 +59,9 @@
    "source": [
     "## Setup\n",
     "Assuming you are reading this from Github:\n",
-    "- Clone this repository locally:\n",
+    "- Clone this repository locally with the correct tag:\n",
     "\n",
-    " ```clone git https://github.com/GoogleCloudPlatform/dataflow-sample-applications```\n",
+    " ```git clone -b notebook_metrics_v1 https://github.com/GoogleCloudPlatform/dataflow-sample-applications```\n",
     "\n",
     "- Install Java 1.8, Gradle and Python 3.x\n",
     "\n",
