[Timeseries] Modify git clone command to add tag

--- a/timeseries-streaming/timeseries-python-applications/notebooks/Comparing_metrics_with_Pandas.ipynb
+++ b/timeseries-streaming/timeseries-python-applications/notebooks/Comparing_metrics_with_Pandas.ipynb
@@ -61,7 +61,7 @@
     "Assuming you are reading this from Github:\n",
     "- Clone this repository locally with the correct tag:\n",
     "\n",
-    " ```git clone -b notebook_metrics_v1 https://github.com/GoogleCloudPlatform/dataflow-sample-applications```\n",
+    " ```git clone -b tsflow-0.3.2-sample https://github.com/GoogleCloudPlatform/dataflow-sample-applications```\n",
     "\n",
     "- Install Java 1.8, Gradle and Python 3.x\n",
     "\n",
